BUG in multiple select checklist, needs manual left-aligning, when sitting in a right-aligned container.

--- a/css/style_lava.css
+++ b/css/style_lava.css
@@ -804,6 +804,7 @@ body.obfus .obfuscate:hover {
 .ui-dropdownchecklist {
   font-size: 100%;
   color: black;
+  text-align:left;
 }
 .ui-dropdownchecklist-selector {
   color: black;
